# ipasideloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_cli.py  run_gui.py
.github/workflows/: build.yml
hooks/: hook_ssl_certs.py
ipasideloader/: __init__.py  cli.py  config.py  errors.py  ipa_archive.py  pipeline.py
ipasideloader/anisette/: provider.py
ipasideloader/apple/: auth.py  certificate.py  developer_services.py  free_provision.py
ipasideloader/certs/: apple-root.pem  ca-bundle.pem
ipasideloader/device/: manager.py
ipasideloader/gui/: app.py
ipasideloader/signing/: base.py  codesign_backend.py  ldid_backend.py  manager.py  zsign_backend.py
scripts/: diagnose.ps1  usbip-attach.ps1
